# email-client-ospsd

./: .gitignore  LICENSE  README.md  basic_demo.py  component.md  example_usage.py  pylock.toml  pyproject.toml  requirements.in
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
my_inbox_api/: README.md  pyproject.toml
my_inbox_api/src/my_inbox_api/: __init__.py
my_inbox_api/tests/: test_interface.py
my_inbox_impl/: pyproject.toml  setup.py
my_inbox_impl/examples/: basic_usage.py  imap_example.py
my_inbox_impl/src/my_inbox_impl/: __init__.py  _impl.py  mail_fetcher.py
my_inbox_impl/tests/: test_impl.py
src/email_client_api/: README.md  __init__.py  pyproject.toml
src/email_client_api/tests/: __init__.py  test_interface.py
src/gmail_client_impl/: README.md  __init__.py  pyproject.toml
src/gmail_client_impl/tests/: __init__.py  test_gmail.py
