[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myinbox"
version = "0.1.0"
description = "Email Client Implementation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Team8"}
]
dependencies = [
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "nose2>=0.15.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "uv>=0.6.0",
]

[tool.uv.workspace]
members = ["my_inbox_api", "my_inbox_impl"]

[tool.uv.sources]
my_inbox_api = { workspace = true }
my_inbox_impl = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["my_inbox_api/tests", "my_inbox_impl/tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "D", "ANN", "PLR"]
ignore = ["E501", "S101", "PLR2004","ANN101","D407","D406"] # ignore

[tool.ruff.lint]
select = ["E", "F", "W", "D", "ANN", "PLR"]
ignore = [
    "INP001",  # Ignore missing __init__.py for namespace packages
    "D100",  # Ignore missing module-level docstrings
    "D203", "D211",  # Conflicting rules about blank lines before class
    "D212", "D213",  # Conflicting rules about multi-line docstrings
    "S101",  # Ignore assert usage in tests
    "T201",  # Ignore print statements in Logger component
    "COM812",  # Suggested by ruff to disable it to avoid unexpected behavior
    "PIE790", # Ignore unnecessary pass statement in interfaces
    "ANN401", # Ignore dynamically typed expression are disallowed in interfaces
    "F401", # Module imported but unused
    "F823", # Local variable name shadows a built-in name
    "PLR2004", # Too many branches
    "ERA001", # File is not encoded with UTF-8
    "F841", # Local variable assigned but not used
    "F821", # Undefined name
    "PGH003", # Use specific rule codes when ignoring type issues
    "I001", # Import block is un-sorted or un-formatted
    "N806", # Camelcase
    "W292",
    "UP035",
    "Q000",
    "PT009",
    "W293",
    "ANN201", "ANN001",
    "D104",
    "E501",
    "D102",
    "D413"
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN001", "ANN201"]
