[project]
name = "my-inbox-impl"
version = "0.1.0"
description = "Implementation of the my-inbox-api interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "my-inbox-api",
    # Add your implementation-specific dependencies here
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
